fixed json concatenation issue

--- a/cluster.ipynb
+++ b/cluster.ipynb
@@ -21,9 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 426 folders\n"
+     ]
+    }
+   ],
    "source": [
     "#check structure for missing views \n",
     "\n",
@@ -32,6 +40,8 @@
     "\n",
     "#compile pattern to match the 7 digit folder name\n",
     "pattern = re.compile(r\"^([0-9a-fA-F]+) - View (\\d+)$\")\n",
+    "folders = [name for name in os.listdir(data_dir) if os.path.isdir(os.path.join(data_dir, name))]\n",
+    "print(f\"there are {len(folders)} folders\")\n",
     "\n",
     "for folder in os.listdir(data_dir):\n",
     "    match = pattern.match(folder) \n",
@@ -48,7 +58,8 @@
     "# for video_id,views in video_views.items(): \n",
     "#     if {\"1,2\"}.issubset(views): \n",
     "#         print(f\"Video ID {video_id} has both views\")\n",
-    "    "
+    "\n",
+    "#426 folders and 254 "
    ]
   },
   {
@@ -57,7 +68,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#if folder has both view 1 and view 2, combine both .json files into single .json file with just video_id \n",
+    "#if folder has both view 1 and view 2, \n",
+    "# combine both .json files into single .json file with just video_id \n",
     "    "
    ]
   }
